# iCubSimpleTask

./: CMakeLists.txt  main.cpp
